improve seo on one page

--- a/luisterboeken.html
+++ b/luisterboeken.html
@@ -3,8 +3,7 @@
     <head>
         <title>Luisterboeken</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Mobiele apps, studiemateriaal en
-            informatiebronnen voor de katholieke gelovige met een smartphone of tablet." />
+        <meta name="description" content="Insipirerende luisterboeken (audio-books) voor de katholieke gelovige." />
         <meta name="google-site-verification" content="AsngXlOa88G3VdZ1h9QSR-cRhM49YUCOiIecY2j6Hlw" />
         <link rel="stylesheet" href="js/jquery.mobile-1.2.0.min.css" />
         <link rel="icon" type="image/png" href="favicon.png" />
@@ -31,7 +30,7 @@
             <div data-role="content">
                 <ul data-role="listview">
                     <li data-theme="e">
-                        <a href="info.html#luisterboeken-info" rel="external">
+                        <a href="info.html#luisterboeken-info" rel="external" title="">
                             <p>Tips voor het beluisteren van luisterboeken</p>
                         </a>
                     </li>
@@ -42,16 +41,18 @@
                             <li data-icon="plus">
                                 <a
                                     href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Lucas-downloadbijbel.m4b"
-                                    rel="external">
-                                    <img src="img/lucas-nl.png" />Evangelie volgens
+                                    rel="external" title="Evangelie volgens
+                                    Lucas als luisterboek">
+                                    <img src="img/lucas-nl.png" alt="monogram van Lucas"/>Evangelie volgens
                                     Lucas<br /><small>39 MB - bron:www.luisterbijbel.nl</small>
                                 </a>
                             </li>
                             <li data-icon="plus">
                                 <a
                                     href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Mattheus-downloadbijbel.m4b"
-                                    rel="external">
-                                    <img src="img/mattheus-nl.png" />Evangelie volgens
+                                    rel="external" title="Evangelie volgens
+                                    Mattheus als luisterboek">
+                                    <img src="img/mattheus-nl.png" alt="monogram van Matteus"/>Evangelie volgens
                                     Mattheus<br /><small>20 MB -
                                         bron:www.luisterbijbel.nl</small>
                                 </a>
@@ -59,16 +60,18 @@
                             <li data-icon="plus">
                                 <a
                                     href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Marcus-downloadbijbel.m4b"
-                                    rel="external">
-                                    <img src="img/marcus-nl.png" />Evangelie volgens
+                                    rel="external" title="Evangelie volgens
+                                    Marcus als luisterboek">
+                                    <img src="img/marcus-nl.png" alt="monogram van Marcus"/>Evangelie volgens
                                     Marcus<br /><small>13 MB - bron:www.luisterbijbel.nl</small>
                                 </a>
                             </li>
                             <li data-icon="plus">
                                 <a
                                     href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Johannes-downloadbijbel.m4b"
-                                    rel="external">
-                                    <img src="img/johannes-nl.png" />Evangelie volgens
+                                    rel="external" title="Evangelie volgens
+                                    Johannes als luisterboek">
+                                    <img src="img/johannes-nl.png" alt="monogram van Johannes"/>Evangelie volgens
                                     Johannes<br /><small>14 MB -
                                         bron:www.luisterbijbel.nl</small>
                                 </a>
@@ -76,8 +79,8 @@
                             <li data-icon="plus">
                                 <a
                                     href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Handelingen%20van%20de%20apostelen-downloadbijbel.m4b"
-                                    rel="external">
-                                    <img src="img/handelingen-nl.png" />Handelingen van de apostelen<br /><small>20 MB -
+                                    rel="external" title="Handelingen van de apostelen als luisterboek">
+                                    <img src="img/handelingen-nl.png" alt="Petrus en Paulus"/>Handelingen van de apostelen<br /><small>20 MB -
                                         bron:www.luisterbijbel.nl</small>
                                 </a>
                             </li>
@@ -90,32 +93,36 @@
                             <li data-icon="plus">
                                 <a
                                     href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Lucas-radiomaria.m4b"
-                                    rel="external">
-                                    <img src="img/lucas-vl.png" />Evangelie volgens
+                                    rel="external" title="Evangelie volgens
+                                    Lucas als luisterboek">
+                                    <img src="img/lucas-vl.png" alt="monogram van Lucas"/>Evangelie volgens
                                     Lucas<br /><small>23 MB - bron:www.radiomaria.be</small>
                                 </a>
                             </li>
                             <li data-icon="plus">
                                 <a
                                     href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Mattheus%20-radiomaria.m4b"
-                                    rel="external">
-                                    <img src="img/mattheus-vl.png" />Evangelie volgens
+                                    rel="external" title="Evangelie volgens
+                                    Mattheus als luisterboek">
+                                    <img src="img/mattheus-vl.png" alt="monogram van Matteus"/>Evangelie volgens
                                     Mattheus<br /><small>5 MB - bron:www.radiomaria.be</small>
                                 </a>
                             </li>
                             <li data-icon="plus">
                                 <a
                                     href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Marcus%20-radiomaria.m4b"
-                                    rel="external">
-                                    <img src="img/marcus-vl.png" />Evangelie volgens
+                                    rel="external" title="Evangelie volgens
+                                    Marcus als luisterboek">
+                                    <img src="img/marcus-vl.png" alt="monogram van Marcus"/>Evangelie volgens
                                     Marcus<br /><small>13 MB - bron:www.radiomaria.be</small>
                                 </a>
                             </li>
                             <li data-icon="plus">
                                 <a
                                     href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/Het%20evangelie%20volgens%20Johannes%20-radiomaria.m4b"
-                                    rel="external">
-                                    <img src="img/johannes-vl.png" />Evangelie volgens
+                                    rel="external" title="Evangelie volgens
+                                    Johannes als luisterboek">
+                                    <img src="img/johannes-vl.png" alt="monogram van Johannes"/>Evangelie volgens
                                     Johannes<br /><small>19 MB - bron:www.radiomaria.be</small>
                                 </a>
                             </li>
@@ -124,39 +131,40 @@
                     <li>
                         <a
                             href="http://www.youtube.com/user/uitgeverijchevigny?feature=watch"
-                            rel="external">
-                            <img src="img/bijbeltapes.png" />De Bijbeltapes<br /><small>bron:www.debijbeltapes.nl</small>
+                            rel="external" title="De Bijbeltapes">
+                            <img src="img/bijbeltapes.png" alt="Bijbeltapes logo"/>De Bijbeltapes<br /><small>bron:www.debijbeltapes.nl</small>
                         </a>
                     </li>
                     <li data-icon="plus">
                         <a
                             href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/kyriale.m4b"
-                            rel="external">
-                            <img src="img/kyriale.png" />Kyriale<br /><small>46 MB -
+                            rel="external" title="Kyriale als luisterboek">
+                            <img src="img/kyriale.png" alt="logo van Kyriale"/>Kyriale<br /><small>46 MB -
                                 bron:www.ccwatershed.org</small>
                         </a>
                     </li>
                     <li data-icon="plus">
                         <a
                             href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/o-antifonen.m4b"
-                            rel="external">
-                            <img src="img/o-antifonen.png" />O-antifonen (17/12 - 23/12)<br /><small>1 MB -
+                            rel="external" title="O-antifonen als luisterboek">
+                            <img src="img/o-antifonen.png" alt="logo van O-antifonen"/>O-antifonen (17/12 - 23/12)<br /><small>1 MB -
                                 bron:www.wdtprs.com</small>
                         </a>
                     </li>
                     <li data-icon="plus">
                         <a
                             href="http://www.archive.org/download/LibrivoxM4bCollectionAudiobooks_8/DeNavolgingVanJezusChristus.m4b"
-                            rel="external">
-                            <img src="img/navolging-luisterboek.jpg" />De navolging van
+                            rel="external" title="De navolging van
+                            Christus (Thomas a Kempis) als luisterboek">
+                            <img src="img/navolging-luisterboek.jpg" alt="Christus wandelt op het water"/>De navolging van
                             Christus (Thomas a Kempis)<br /><small>98 MB - bron:www.librivox.nl</small>
                         </a>
                     </li>
                     <li data-icon="plus">
                         <a
                             href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/audiobooks/dithyrambe.mp3"
-                            rel="external">
-                            <img src="img/dithyrambe.png" />Dithyrambe op het Allerheiligste (Cornelius Broere)<br /><small>9 MB - lofdicht op het mirakel van Amsterdam</small>
+                            rel="external" title="Dithyrambe op het Allerheiligste (Cornelius Broere) als luisterboek">
+                            <img src="img/dithyrambe.png" alt="Schilderij van het mirakel van Amsterdam"/>Dithyrambe op het Allerheiligste (Cornelius Broere)<br /><small>9 MB - lofdicht op het mirakel van Amsterdam, herdacht in de Stille Omgang</small>
                         </a>
                     </li>
                 </ul>
