nieuwe apps en luisteradres voor radio maria nl

--- a/gebeden.html
+++ b/gebeden.html
@@ -611,6 +611,21 @@
                         </div>
                     </div>
                     <div data-role="collapsible">
+                        <h2>Gebed tot de engelen</h2>
+                        <div>
+                          <p>
+                              Heilige Aartsengel Michaël met uw licht, verlicht ons.</br>
+                              Heilige Aartsengel Michaël met uw vleugels bescherm ons.</br>
+                              Heilige Aartsengel Michaël met uw zwaard verdedig ons.</br>
+                              Heilige Aarstengel Gabriël, gezant van God, leg ons de woorden in de mond om het hart van het volk te beroeren om de Heer onze God te loven!</br>
+                              Heilige Aartsengel Raphaël, begeleider ons door God gegeven, neem ons bij de hand en leid ons naar het Eeuwig leven!
+                          </p> 
+                          <p>
+                              Amen.
+                          </p>
+                        </div>
+                    </div>
+                    <div data-role="collapsible">
                         <h2>De Kruisweg</h2>
                         <ul data-role="listview">
                             <li>
