--- a/android-apps.html
+++ b/android-apps.html
@@ -45,6 +45,16 @@
                                 beluisteren en bekijken!</small>
                         </a>
                     </li>
+                    <li>
+                        <a href="https://play.google.com/store/apps/details?id=nl.boekencentrum.likegod" title="Like God">
+                            <img src="img/likegod.png" alt="Like God Android App"/>Like God<br /><small>Dagboek om God beter te leren kennen.</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://play.google.com/store/apps/details?id=com.augustinus" title="Augustinus 365x">
+                            <img src="img/augustinusvooriederedag.png" alt="Augustinus voor iedere dag"/>Augustinus 365x<br /><small>Elke dag een citaat van de kerkvader Augustinus</small>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- content -->
