added start de stilte and ported some layout features from katholiek kwartetten

--- a/android-apps.html
+++ b/android-apps.html
@@ -46,7 +46,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://play.google.com/store/apps/details?id=nl.boekencentrum.likegod" title="Like God" target="_blank">
+                        <a href="https://play.google.com/store/apps/details?id=nl.boekencentrum.likegod" title="Like God">
                             <img src="img/likegod.png" alt="Like God Android App"/>Like God<br /><small>Dagboek om God beter te leren kennen.</small>
                         </a>
                     </li>
