--- a/info.html
+++ b/info.html
@@ -26,27 +26,24 @@
             <!-- /header -->
 
             <div data-role="content">
-                <p>E-boeken kan je meestal als EPUB-bestanden of als MOBI-bestand. Om ze te lezen
+              <p>E-boeken kan je meestal downloaden als EPUB-bestanden of als MOBI-bestand of je
+              vindt ze in een online boekhandel. Om ze te lezen
                     moet je een app installeren waarin je een bibliotheek van e-boeken kan opbouwen.
                     Zo'n app houdt bij waar je met lezen geeindigd bent en je kan er ook
                     aantekeningen mee maken.</p>
-                <h3>Book.ish</h3>
-                <p><i>Book.ish</i> is geen echte app, maar een website die alle features van een
-                    volwaardige e-booklezer aanbiedt.</p>
+                <h3>Google Play Books</h3>
+                <p><i>Google Play Books</i> is de app waarmee je boeken leest die je bij Google's
+                online boekhandel aankoopt, maar je kan ook je eigen e-boeken oploaden in je prive-
+               bibliotheek en overal lezen, ook op je PC.  </p>
                 <ul data-role="listview" data-inset="true">
                     <li>
-                        <a href="http://book.ish">
-                            <img src="img/book.ish.png" />Browse naar <i>Book.ish</i>
+                        <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.books">
+                            <img src="img/google-play-books.png" />Browse naar <i>Google Play Books</i> op Google Play
                         </a>
                     </li>
-                </ul>
-                <h3>Moon+Reader</h3>
-                <p><i>Moon+Reader</i> is een Android app om e-boeken te lezen</p>
-                <ul data-role="listview" data-inset="true">
                     <li>
-                        <a
-                            href="https://play.google.com/store/apps/details?id=com.flyersoft.moonreaderp">
-                            <img src="img/moonreader.png" />Installeer <i>Moon+Reader</i>
+                        <a href="https://itunes.apple.com/us/app/google-play-books/id400989007?mt=8">
+                            <img src="img/google-play-books.png" />Browse naar <i>Google Play Books</i> op iTunes
                         </a>
                     </li>
                 </ul>
