--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -37,6 +37,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="http://www.startdestilte.be/" title="Start de Stilte">
+                            <img src="img/start-de-stilte.png" alt="Start de Stilte"/>Start de Stilte<br /><small>Leren bidden</small>
+                        </a>
+                    </li>
+                    <li>
                         <a href="http://retreats.sacredspace.ie/nl" title="Vastenretraite">
                             <img src="img/gewijde-ruimte.png" alt="Vastenretraite"/>Vastenretraite
                         </a>
