added start de stilte and ported some layout features from katholiek kwartetten

--- a/index.html
+++ b/index.html
@@ -63,15 +63,20 @@
                         <a href="kalenders.html"><img src="img/calendars.png" />Kalenders</a>
                     </li>
                 </ul>
-                    <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=credomobiel.net"
-                        data-role="button" data-icon="star" data-theme="e" data-inline="true"
-                        >Like</a>
-                    <a target="_blank" href="http://twitter.com/home?status=credomobiel.net" data-role="button"
-                        data-icon="star" data-theme="e" data-inline="true">Tweet</a>
-                    <a target="_blank"
-                        href="https://plus.google.com/share?url=credomobiel.net"
-                        data-role="button" data-icon="star" data-theme="e" data-inline="true"
-                        >Google+</a>
+                <a href="#share2" data-role="button" data-theme="e" data-inline="true" data-rel="popup">Delen</a>
+                <div data-role="popup" id="share2">
+                    <ul data-role="listview" data-inset="true">
+                        <li>
+                            <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=credomobiel.net">Like</a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="http://twitter.com/home?status=credomobiel.net">Tweet</a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://plus.google.com/share?url=credomobiel.net">Google+</a>
+                        </li>
+                    </ul>
+                </div>
                 <a target="_blank"
                     href="mailto:info@credomobiel.net"
                     data-role="button" data-icon="info" data-theme="e" data-inline="true"
