added start de stilte and ported some layout features from katholiek kwartetten

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="kalenders.html"><img src="img/calendars.png" />Kalenders</a>
                     </li>
                 </ul>
-                <a href="#share2" data-role="button" data-theme="e" data-inline="true" data-rel="popup">Delen</a>
+                <a href="#share2" data-role="button"  data-mini="true" data-theme="e" data-inline="true" data-rel="popup">Delen</a>
                 <div data-role="popup" id="share2">
                     <ul data-role="listview" data-inset="true">
                         <li>
@@ -79,7 +79,7 @@
                 </div>
                 <a target="_blank"
                     href="mailto:info@credomobiel.net"
-                    data-role="button" data-icon="info" data-theme="e" data-inline="true"
+                    data-role="button" data-icon="info" data-mini="true" data-theme="e" data-inline="true"
                     >info@credomobiel.net</a>
             </div>
             <!-- /content -->
