--- a/info.html
+++ b/info.html
@@ -38,12 +38,12 @@
                 <ul data-role="listview" data-inset="true">
                     <li>
                         <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.books">
-                            <img src="img/google-play-books.png" />Browse naar <i>Google Play Books</i> op Google Play
+                            <img src="img/google-play-books.png" />Google Play Store
                         </a>
                     </li>
                     <li>
                         <a href="https://itunes.apple.com/us/app/google-play-books/id400989007?mt=8">
-                            <img src="img/google-play-books.png" />Browse naar <i>Google Play Books</i> op iTunes
+                            <img src="img/google-play-books.png" />iTunes
                         </a>
                     </li>
                 </ul>
