--- a/gebeden.html
+++ b/gebeden.html
@@ -566,12 +566,12 @@
                                 verlosser van de wereld, ontferm u over ons<br /> God de heilige
                                 Geest, ontferm u over ons<br /> Heilige geest, een God, ontferm u
                                 over ons </p>
-                            <p> Jezus, zachtmoedig en nedering van hart, maar ons hart gelijk aan
+                            <p> Jezus, zachtmoedig en nedering van hart, maak ons hart gelijk aan
                                 het uwe<br /> van het verlangen om gewaardeerd te worden, bevrijd
                                 me, o Jezus<br /> van het verlangen om beming te worden, bevrijd me,
                                 o Jezus<br /> van het verlangen om geëerd te worden, bevrijd me, o
                                 Jezus<br /> van het verlangen om geprezen te worden, bevrijd me, o
-                                Jezus<br /> van het verlangen om verkeur te genieten, bevrijd me, o
+                                Jezus<br /> van het verlangen om voorkeur te genieten, bevrijd me, o
                                 Jezus<br /> van het verlangen geraadpleegd te worden, bevrijd me, o
                                 Jezus<br /> van het verlangen om bevestigd te worden, bevrijd me, o
                                 Jezus<br /> van het verlangen om populair te zijn, bevrijd me, o
