trying out webintent

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="js/credomobiel.js"></script>
         <!-- http://stackoverflow.com/questions/6221527/jquery-mobile-latest-03-june-2011-version-no-back-button -->
         <script src="js/jquery.mobile-1.2.0.min.js"></script>
+        <script src="phonegap.js"></script>
         <script src="webintent.js"></script>
     </head>
     <body>
