--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -37,13 +37,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://www.startdestilte.be/" title="Start de Stilte">
-                            <img src="img/start-de-stilte.png" alt="Start de Stilte"/>Start de Stilte<br /><small>Leren bidden</small>
+                        <a href="http://www.rkdocumenten.nl/" title="RK Documenten">
+                            <img src="img/rkdocumenten.png" alt="RK Documenten"/>RK Documenten<br /><small>Kerkelijke documenten</small>
                         </a>
                     </li>
                     <li>
-                        <a href="http://retreats.sacredspace.ie/nl" title="Vastenretraite">
-                            <img src="img/gewijde-ruimte.png" alt="Vastenretraite"/>Vastenretraite
+                        <a href="http://www.startdestilte.be/" title="Start de Stilte">
+                            <img src="img/start-de-stilte.png" alt="Start de Stilte"/>Start de Stilte<br /><small>Leren bidden</small>
                         </a>
                     </li>
                     <li>
@@ -55,6 +55,11 @@
                         <a href="http://www.bijbelmobiel.nl" title="De Nieuwe Bijbelvertaling">
                             <img src="img/bijbelmobiel.png" alt="BijbelMobiel"/>BijbelMobiel<br /><small>De Nieuwe
                                 Bijbelvertaling <i>online</i></small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://retreats.sacredspace.ie/nl" title="Vastenretraite">
+                            <img src="img/gewijde-ruimte.png" alt="Vastenretraite"/>Vastenretraite
                         </a>
                     </li>
                     <li>
