added amazon ebook links

--- a/e-boeken.html
+++ b/e-boeken.html
@@ -35,31 +35,59 @@
                             <p>Tips voor het lezen van e-boeken</p>
                         </a>
                     </li>
-                    <li data-icon="plus">
-                        <a
-                            href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/kyriale.pdf"
-                            rel="external">
-                            <img src="img/kyriale.png"
-                            />Kyriale<br /><small>bron:www.una.voce.de</small>
-                        </a>
-                    </li>
-                    <li data-icon="plus">
-                        <a
-                            href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/De-Navolging-van-Christus-Thomas-a-Kempis.epub"
-                            rel="external">
-                            <img src="img/navolging-e-boek.jpg" />De navolging van
-                            Christus<br /><small>Thomas a Kempis</small>
-                        </a>
-                    </li>
-                    <li data-icon="plus">
-                        <a
-                            href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/Innerlijk-Leven-Willem-Grossouw.epub"
-                            rel="external">
-                            <img src="img/innerlijk-leven.png" />Innerlijk Leven<br /><small>Willem
-                                Grossouw</small>
-                        </a>
-                    </li>
                 </ul>
+                <div data-role="collapsible-set" data-inset="false">
+                    <div data-role="collapsible" data-inset="false" data-collapsed="false">
+                        <h2>EPUB downloaden</h2>
+                        <ul data-role="listview">
+                           <li data-icon="plus">
+                               <a
+                                   href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/kyriale.pdf"
+                                   rel="external">
+                                   <img src="img/kyriale.png"
+                                   />Kyriale<br /><small>bron:www.una.voce.de</small>
+                               </a>
+                           </li>
+                           <li data-icon="plus">
+                               <a
+                                   href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/De-Navolging-van-Christus-Thomas-a-Kempis.epub"
+                                   rel="external">
+                                   <img src="img/navolging-e-boek.jpg" />De navolging van
+                                   Christus<br /><small>Thomas a Kempis</small>
+                               </a>
+                           </li>
+                           <li data-icon="plus">
+                               <a
+                                   href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/Innerlijk-Leven-Willem-Grossouw.epub"
+                                   rel="external">
+                                   <img src="img/innerlijk-leven.png" />Innerlijk Leven<br /><small>Willem
+                                       Grossouw</small>
+                               </a>
+                           </li>
+                       </ul>
+                    </div>
+                    <div data-role="collapsible" data-inset="false">
+                        <h2>Amazon</h2>
+                        <ul data-role="listview">
+                            <li>
+                                <a
+                                    href="http://www.amazon.com/dp/B00F758136"
+                                    rel="external">
+                                    <img src="img/navolging-e-boek.jpg" />De navolging van
+                                    Christus<br /><small>Thomas a Kempis</small>
+                                </a>
+                            </li>
+                            <li>
+                                <a
+                                    href="http://www.amazon.com/dp/B00F58L6AU"
+                                    rel="external">
+                                    <img src="img/innerlijk-leven.png" />Innerlijk Leven<br /><small>Willem
+                                        Grossouw</small>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <!-- content -->
             
