added preken.be and credomobiel

--- a/android-apps.html
+++ b/android-apps.html
@@ -46,6 +46,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="https://play.google.com/store/apps/details?id=net.credomobiel" title="Credomobiel">
+                            <img src="img/e-boeken.png" alt="Credomobiel"/>Credomobiel<br /><small>Voor de katholieke gelovige met een smartphone of tablet</small>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://play.google.com/store/apps/details?id=nl.boekencentrum.likegod" title="Like God">
                             <img src="img/likegod.png" alt="Like God Android App"/>Like God<br /><small>Dagboek om God beter te leren kennen.</small>
                         </a>
