--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -47,6 +47,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="http://preken.be/" title="Preken">
+                            <img src="img/preken.png" alt="Preken"/>Preken<br /><small>Verzameling preken voor zon- en feestdagen</small>
+                        </a>
+                    </li>
+                    <li>
                         <a href="http://www.missale.net/?lang=nl" title="Prentenmissaal">
                             <img src="img/missale.png" alt="Missale"/>Missale<br /><small>Prentenmissaal</small>
                         </a>
