--- a/android-apps.html
+++ b/android-apps.html
@@ -60,6 +60,11 @@
                             <img src="img/augustinusvooriederedag.png" alt="Augustinus voor iedere dag"/>Augustinus 365x<br /><small>Elke dag een citaat van de kerkvader Augustinus</small>
                         </a>
                     </li>
+                    <li>
+                        <a href="https://play.google.com/store/apps/details?id=net.credomobiel.mechelsecatechismus" title="Mechelse Catechismus">
+                            <img src="img/mechelse-catechismus.png" alt="Mechelse Catechismus"/>Mechelse Catechismus<br /><small>Oefen je catechismus met vraag-en-antwoord</small>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- content -->
