--- a/e-boeken.html
+++ b/e-boeken.html
@@ -38,17 +38,16 @@
                 </ul>
                 <div data-role="collapsible-set" data-inset="false">
                     <div data-role="collapsible" data-inset="false" data-collapsed="false">
-                        <h2>EPUB downloaden</h2>
+                        <h2>EPUB/PDF downloaden</h2>
                         <ul data-role="listview">
-                           <li data-icon="plus">
-                               <a
-                                   href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/kyriale.pdf"
-                                   rel="external">
-                                   <img src="img/kyriale.png"
-                                   />Kyriale<br /><small>bron:www.una.voce.de</small>
-                               </a>
-                           </li>
-                           <li data-icon="plus">
+                            <li data-icon="plus">
+                                <a
+                                    href="http://www.boekhandel.org/product/9789057191800"
+                                    rel="external">
+                                    <img src="img/nieuwe-bijbelvertaling.jpg" />Nieuwe Bijbelvertaling<br />
+                                </a>
+                            </li>
+                            <li data-icon="plus">
                                <a
                                    href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/De-Navolging-van-Christus-Thomas-a-Kempis.epub"
                                    rel="external">
@@ -64,7 +63,23 @@
                                        Grossouw</small>
                                </a>
                            </li>
-                       </ul>
+                            <li data-icon="plus">
+                                <a
+                                    href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/Katholieke-Avondgebeden.pdf"
+                                    rel="external">
+                                    <img src="img/avondgebeden.png"
+                                    />Avondgebeden<br />
+                                </a>
+                            </li>
+                            <li data-icon="plus">
+                                <a
+                                    href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/kyriale.pdf"
+                                    rel="external">
+                                    <img src="img/kyriale.png"
+                                    />Kyriale<br /><small>bron:www.una.voce.de</small>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                     <div data-role="collapsible" data-inset="false">
                         <h2>Amazon</h2>
