added catechismus as webpage

--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -63,6 +63,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="http://vicmortelmans.github.io/flashcards-html5-phonegap/" title="Mechelse Catechismus" rel="external">
+                            <img src="img/mechelse-catechismus.png" />Catechismus
+                        </a>
+                    </li>
+                    <li>
                         <a href="http://retreats.sacredspace.ie/nl" title="Vastenretraite">
                             <img src="img/gewijde-ruimte.png" alt="Vastenretraite"/>Vastenretraite
                         </a>
