--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://vicmortelmans.github.io/flashcards-html5-phonegap/" title="Mechelse Catechismus" rel="external">
+                        <a href="http://vicmortelmans.github.io/flashcards-html5-phonegap/index.web.html" title="Mechelse Catechismus" rel="external">
                             <img src="img/mechelse-catechismus.png" />Catechismus
                         </a>
                     </li>
