adding radio player

--- a/internetradio.html
+++ b/internetradio.html
@@ -29,35 +29,48 @@
             <!-- /header -->
             
             <div data-role="content">
+                        <p>
+                <audio controls width="100%">
+                    <source src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.m3u" type="audio/mpeg">
+                    <embed width="100%" src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.m3u">
+                </audio>
+            </p>
+
                 <ul data-role="listview">
                     <li data-theme="e">
                         <a href="info.html#internetradio-info" rel="external">
                             <p>Tips voor het beluisteren van radio via internet</p>
                         </a>
                     </li>
-                    <li data-icon="plus">
+                    <li data-icon="plus" class="android">
+                        <a href="http://credomobiel.net/internetradio/radio-maria-vlaanderen.pls" rel="external">
+                            <img src="img/radiomaria.jpg" />Radio Maria Vlaanderen <br/>
+                        </a>
+                    </li>
+                    <li data-icon="plus" class="ios">
                         <a href="http://credomobiel.net/internetradio/radio-maria-vlaanderen.m3u" rel="external">
                             <img src="img/radiomaria.jpg" />Radio Maria Vlaanderen <br/>
-                            <small>http://credomobiel.net/internetradio/radio-maria-vlaanderen.m3u</small><br/>
-                            <small>http://credomobiel.net/internetradio/radio-maria-vlaanderen.pls</small>
                         </a>
-                        <a href="http://credomobiel.net/internetradio/radio-maria-vlaanderen.pls" rel="external">PLS</a>
                     </li>
-                    <li data-icon="plus">
+                    <li data-icon="plus" class="android">
+                        <a href="http://credomobiel.net/internetradio/radio-maria-nederland.pls" rel="external">
+                            <img src="img/radiomaria.jpg" />Radio Maria Nederland  <br/>
+                        </a>
+                    </li>
+                    <li data-icon="plus" class="ios">
                         <a href="http://credomobiel.net/internetradio/radio-maria-nederland.m3u" rel="external">
                             <img src="img/radiomaria.jpg" />Radio Maria Nederland  <br/>
-                            <small>http://credomobiel.net/internetradio/radio-maria-nederland.m3u</small><br/>
-                            <small>http://credomobiel.net/internetradio/radio-maria-nederland.pls</small>
                         </a>
-                        <a href="http://credomobiel.net/internetradio/radio-maria-nederland.pls" rel="external">PLS</a>
                     </li>
-                    <li data-icon="plus">
+                    <li data-icon="plus" class="android">
+                        <a href="http://credomobiel.net/internetradio/concertzender-gregoriaans.pls" rel="external">
+                            <img src="img/concertzender.png" />Concertzender Gregoriaans  <br/>
+                        </a>
+                    </li>
+                    <li data-icon="plus" class="ios">
                         <a href="http://credomobiel.net/internetradio/concertzender-gregoriaans.m3u" rel="external">
                             <img src="img/concertzender.png" />Concertzender Gregoriaans  <br/>
-                            <small>http://credomobiel.net/internetradio/concertzender-gregoriaans.m3u</small><br/>
-                            <small>http://credomobiel.net/internetradio/concertzender-gregoriaans.pls</small>
                         </a>
-                        <a href="http://credomobiel.net/internetradio/concertzender-gregoriaans.pls" rel="external">PLS</a>
                     </li>
                 </ul>
             </div>
