adding radio player

--- a/internetradio.html
+++ b/internetradio.html
@@ -31,8 +31,8 @@
             <div data-role="content">
                         <p>
                 <audio controls width="100%">
-                    <source src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.m3u" type="audio/mpeg">
-                    <embed width="100%" src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.m3u">
+                    <source src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.pls" type="audio/mpeg">
+                    <embed width="100%" src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.pls">
                 </audio>
             </p>
 
