adding radio player

--- a/internetradio.html
+++ b/internetradio.html
@@ -30,10 +30,7 @@
             
             <div data-role="content">
                         <p>
-                <audio controls width="100%">
-                    <source src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.pls" type="audio/mpeg">
-                    <embed width="100%" src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.pls">
-                </audio>
+              <video controls src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.m3u">
             </p>
 
                 <ul data-role="listview">
